Fix white space in profile description

--- a/pages/recruiters/[id]/components/BasicInfo/style.module.scss
+++ b/pages/recruiters/[id]/components/BasicInfo/style.module.scss
@@ -33,6 +33,7 @@
     }
 
     .selfIntro {
+      white-space: preserve;
       margin-top: -65px;
       @include fs24;
     }
